# close2gl

./: CMakeLists.txt  imgui.ini
shaders/: fragment.glsl  lean_vertex.glsl  vertex.glsl
src/: main.cpp
